Fixed sanitize.css import
Signed-off-by: Jan Blasko <honza@lucien144.net>

--- a/src/styles/_vendors.scss
+++ b/src/styles/_vendors.scss
@@ -1,6 +1,6 @@
 // out: false
-@import "./node_modules/sanitize.css/sanitize.css";
-
 @import "./node_modules/bootstrap/scss/bootstrap-reboot";
 @import "./node_modules/bootstrap/scss/bootstrap-grid";
 @import "./node_modules/bootstrap/scss/utilities";
+
+@import "./node_modules/sanitize.css/sanitize";
