--- a/src/styles/_vendors.scss
+++ b/src/styles/_vendors.scss
@@ -1,6 +1,3 @@
 // out: false
-@import "./node_modules/bootstrap/scss/bootstrap-reboot";
 @import "./node_modules/bootstrap/scss/bootstrap-grid";
-@import "./node_modules/bootstrap/scss/utilities";
-
-@import "./node_modules/sanitize.css/sanitize";
+@import "./node_modules/destyle.css/destyle";
