--- a/src/styles/_typo.scss
+++ b/src/styles/_typo.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
 
-html, body {
+html,
+body {
 	font-family: 'Lato', sans-serif;
 	font-size: 18px;
 }
