--- a/src/styles/_vendors.scss
+++ b/src/styles/_vendors.scss
@@ -1,4 +1,4 @@
-@import "./node_modules/bootstrap/scss/mixins";
-@import "./node_modules/bootstrap/scss/bootstrap-grid";
-@import "./node_modules/bootstrap/scss/utilities";
-@import "./node_modules/destyle.css/destyle";
+@import "../../node_modules/bootstrap/scss/mixins";
+@import "../../node_modules/bootstrap/scss/bootstrap-grid";
+@import "../../node_modules/bootstrap/scss/utilities";
+@import "../../node_modules/destyle.css/destyle";
